tests/snapshots/assets__check_file@unit-markup-content-func.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/markup/content-func.typ
---
#doc-style.show-parameter-block(
  "length",
  "number",
  [
    The size of the mark in the direction it is pointing. The width of a legend items preview picture, a small preview of the graph the legend item belongs to.
  ],
  default: 0.2cm,
)
