tests/snapshots/assets__check_file@unit-markup-content-func.typ-80.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/markup/content-func.typ
snapshot_kind: text
---
#doc-style.show-parameter-block(
  "length",
  "number",
  [The size of the mark in the direction it is pointing. The width of a legend items preview picture, a small preview of the graph the legend item belongs to.],
  default: 0.2cm,
)
