tests/snapshots/assets__check_file@unit-markup-content-math.typ-40.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/markup/content-math.typ
snapshot_kind: text
---
#(
  [$
      111111111111111111111111111111111111111111111111111111111111111111111111111111111111
    $]
)
