tests/snapshots/assets__check_file@unit-markup-content-math.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/markup/content-math.typ
---
#(
  [$
    111111111111111111111111111111111111111111111111111111111111111111111111111111111111
    $]
)
