tests/snapshots/assets__check_file@unit-markup-content-multiline.typ-0.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/markup/content-multiline.typ
snapshot_kind: text
---
#[]
#[ ]
#[ ]
#[ ]
#[

]

#[00]
#[01 ]
#[02
]
#[ 10]
#[
  11
]
#[
  12
]
#[
  20]
#[
  21
]
#[
  22
]

#[0
  0]
#[0
  1
]
#[0
  2
]
#[
  1
  0]
#[
  1
  1
]
#[
  1
  2
]
#[
  2
  0]
#[
  2
  1
]
#[
  2
  2
]

#[/*  */00/*  */]
#[ /*  */ 10/*  */]
#[/*  */01 /*  */ ]
#[
  /*  */ 11 /*  */
]
#[/*  */0
  0/*  */]
#[
  /*  */ 1
  0/*  */]
#[/*  */0
  1 /*  */
]
#[
  /*  */ 1
  1 /*  */
]

#[
  // a
  20]
#[
  // b
  20]
#[
  // c
  20]
#[02 // d
]

#[
  // a
  21
]
#[
  // a
  22
]
#[
  // b
  21
]
#[
  // b
  22
]

#[/*
 */00/*
 */]
#[ /*
 */ 10/*
 */]
#[/*
 */01 /*
 */ ]
#[
  /*
 */ 11 /*
 */
]
