tests/snapshots/assets__check_file@unit-markup-content-nest.typ-40.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/markup/content-nest.typ
snapshot_kind: text
---
#[#[ ]abc]
#[ #[ ]abc]
#[abc#[ ]]
#[abc#[ ] ]

#[#{ }abc]
#[ #{ }abc]
#[abc#{ }]
#[abc#{ } ]
