tests/snapshots/assets__check_file@unit-markup-content-par-break.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/markup/content-par-break.typ
---
123
#[
  
  
  123123
]

#[
  123123
  

]
123
